# sandsimulationrust

./: Cargo.toml
src/: cell_system.rs  fps_counter.rs  gui.rs  main.rs
